<resources>
    <string name="app_name" translatable="false">Hamster-Hunter</string>
    <!--боттом_меню-->
    <string name="home">Главная</string>
    <string name="favorite">Избранное</string>
    <string name="text_team">Команда</string>
    <!--поиск-->
    <string name="job_search">Поиск вакансий</string>
    <string name="enter_your_request">Введите запрос</string>
    <string name="no_such_jobs">Таких вакансий нет</string>
    <!-- пример использования resources.getQuantityString(R.plurals.found_jobs_plural, count, count)-->
    <plurals name="found_jobs_plural">
        <item quantity="one">Найдена %1$s вакансия</item>
        <item quantity="two">Найдено %1$s вакансии</item>
        <item quantity="few">Найдено %1$s вакансии</item>
        <item quantity="many">Найдено %1$s вакансий</item>
        <item quantity="other">Найдено %1$s вакансий</item>
    </plurals>

    <!--фильтрация-->
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="job_location">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_salary">Введите сумму</string>
    <string name="dont_show_results_without_salary">Не показывать без зарплаты</string>
    <string name="search_only_in_titles">Искать только в заголовках вакансий</string>
    <string name="error_enter_a_number">Введите число от 0 до 2 147 483 647</string>
    <!--выбор места работы-->
    <string name="choose_job_location">Выбор места работы</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <!--выбор страны/региона/отрасли-->
    <string name="choose_country">Выбор страны</string>
    <string name="choose_region">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="choose_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <!--деньги -->
    <string name="rur_rub"> ₽</string><!--согласно readme rur/rub-->
    <string name="byr"> Br</string>
    <string name="usd"> $</string>
    <string name="eur"> €</string>
    <string name="kzt"> 〒</string>
    <string name="uah"> ₴</string>
    <string name="azn"> ₼</string>
    <string name="uzs"> soʻm</string>
    <string name="gel"> ლ</string>
    <string name="kgt"> с</string>
    <!--вакансии -->
    <string name="job">Вакансия</string>
    <string name="from_title">От </string>
    <string name="from">от </string>
    <string name="to_title">До </string>
    <string name="to">до </string>
    <string name="no_salary_info">Зарплата не указана</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="job_description">Описание вакансии</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="key_skill_separator">"   •    %s\n"</string>
    <string name="description_li_replacement"><![CDATA[<li>&#160;]]></string>
    <string name="description_regex_li"><![CDATA[<li>\s*<p>|<li>]]></string>
    <!--кнопки-->
    <string name="select">Выбрать</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <!--error-->
    <string name="error_no_internet">Нет интернета</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_job_not_found_or_deleted">Вакансия не найдена или удалена</string>
    <string name="error_nothing_found_vacancy">Не удалось получить\nсписок вакансий</string>
    <string name="error_nothing_found">Не удалось получить\nсписок</string>
    <string name="error_favorites_is_empty">Список пуст</string>
    <string name="error_too_big_salary">Введите число больше 0 и меньше 2 147 483 647</string>
    <!-- team, список взят из пачки -->
    <string name="worked_on_project">Над приложением работали</string>
    <string name="dev1">Аксенов Александр Сергеевич</string>
    <string name="dev2">Артеменко Евгений Александрович</string>
    <string name="dev3">Григорьев Давид Петрович</string>
    <string name="dev4">Марковцев Станислав Вадимович</string>
    <string name="dev5">Филиппова Светлана Владимировна</string>
    <string name="dev6">Шахов Сергей Геннадьевич</string>
    <!-- шаблон для обьединение заголовка вакансии и региона -->
    <string name="vacancy_name_and_location">%s, %s</string>
    <string name="error_toast_no_internet">Проверьте подключение к интернету</string>
    <string name="error_toast_server">Произошла ошибка</string>
    <string name="bearer_token">Bearer %s</string>
    <string name="search_screen">Экран поиска вакансий</string>
    <string name="no_found_industry">Такой отрасли нет</string>
    <string name="industry_placeholder">Отрасль</string>
    <string name="not_region">Такого региона нет</string>
    <!-- content descriptions -->
    <string name="search_error">Ошибка при попытке поиска вакансий</string>
    <string name="filters">Фильтры</string>
    <string name="logotype">Логотип фирмы</string>
</resources>
